<resources>
    <string name="app_name">RSPL mSFA</string>
    <string name="str_copy_rights">Copyright &#169; 2016 Arteria. All rights reserved.</string>
    <string name="app_loading">Loading... </string>
    <string name="host">172.25.12.48</string>
    <string name="port">8080</string>
    <string name="clientValue">001</string>
    <string name="applicationIDText">mSFA</string>
    <string name="securityConfigText">mSFA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="block_custome_error_msg">BP not authorized for sales area</string>
    <string name="no_google_playservice_available">No Google Playservice found. Please install it.</string>
    <string name="permission_rationale">Please grant location permission to start the service</string>
    <string name="permission_GPS">Please enable GPS location permission to start the service</string>
    <string name="Enable">Enable</string>
    <string name="project_title">mSecSales</string>
    <string name="registration">Registration</string>
    <string name="uName">User Name</string>
    <string name="star">*</string>
    <string name="st">:</string>
    <string name="password">Password</string>
    <string name="serverHost">Server Host</string>
    <string name="client">Client</string>
    <string name="applicationID">Application ID</string>
    <string name="securityConfig">Security Config</string>
    <string name="showPassword">Show Password</string>
    <string name="register">Register</string>
    <string name="clear">Clear</string>
    <string name="exit">Exit</string>
    <string name="aboutUs">About Us</string>
    <string name="auto_sync">Auto Sync :</string>
    <string name="serverPort">Server Port</string>
    <string name="syncmenu">Sync Menu</string>
    <string name="registerationheader">mSFA</string>
    <string name="_data_data_">/data/data/</string>
    <string name="uao_3_activations_rs_300_rechagre_month_">UAO(>3 Activations &amp; Rs 300 recharge/ month)</string>
    <string name="no_req_to_update_sap">No pending requests to update SAP</string>
    <string name="no_req_to_update_merchant">No pending requests to update Merchant</string>
    <string name="error_occured_during_get_image">Media download failed</string>
    <string name="credit_note_menu">Incentive</string>
    <string name="register_with_server_plz_wait">Registering with server, please wait&#8230;</string>
    <string name="reterving_with_service_document">Retrieving service document&#8230;</string>
    <string name="reterving_with_meta_document">Retrieving metadata&#8230;</string>
    <string name="error_while_meta_document">Error while retrieving metadata.</string>
    <string name="error_while_service_document">Error while retrieving service document.</string>
    <string name="sync_progress_msg">Synchronization in Progress</string>
    <string name="alert_enter_atlest_one_material">Enter quantity atleast one CRS SKU Group</string>
    <string name="msg_update_end">Updating end, please wait</string>
    <string name="title_ship_to">Ship To</string>
    <string name="title_sales_order">SOs</string>
    <string name="lbl_history">History</string>
    <string name="lbl_pending_sync">Pending Sync</string>
    <string name="title_sample_disbursement">Sample Disbursement</string>
    <string name="lbl_brand">Brand</string>
    <string name="msg_secondary_so_created">Sales Order created</string>
    <string name="str_concat_two_texts_colon">%1$s : %2$s</string>
    <string name="lbl_uid">UID</string>
    <string name="lbl_s_no">S.No</string>
    <string name="lbl_mtd_bill_val">MTD Bill Value</string>
    <string name="sync_terminated_data_conn_lost">Sync : Sync terminated as data connectivity was lost</string>
    <string name="records_sync_successfully">records  synchronized successfully</string>
    <string name="sync_successfully">Synchronization completed</string>
    <string name="sync_successfully_completed">Synchronization successfully completed.</string>
    <string name="do_want_cancel_sync">Do you want to cancel synchronisation?</string>
    <string name="view_log">View Log</string>
    <string name="lbl_feed_back_created">Feedback created</string>
    <string name="Feedback_created">Feedback created</string>
    <string name="lbl_payment_related">Payment Related</string>
    <string name="error_occured_during_sync">Error occurred while Synchronizing, Please check the log.</string>
    <string name="do_u_want_exit">Do you want to exit?</string>
    <string name="do_u_want_exit_inv_create">Do you want to exit from Sales Order Create?</string>
    <string name="do_u_want_exit_return_materials">Do you want to exit from Returns?</string>
    <string name="do_u_want_exit_collection_create">Do you want to exit from Collection?</string>
    <string name="do_u_want_exit_cef">Do you want to exit from CEF?</string>
    <string name="do_u_want_exit_img_capture">Do you want to exit from Image Capture?</string>
    <string name="do_u_want_exit_rela_call">Do you want to exit from RelationShip Call?</string>
    <string name="do_u_want_exit_business_call">Do you want to exit from Business Call?</string>
    <string name="do_u_want_exit_shade_card">Do you want to exit from Shared Card?</string>
    <string name="do_u_want_exit_customer_compliants">Do you want to exit from Customer Complaints?</string>
    <string name="do_u_want_exit_dealer_stock">Do you want to exit from Dealer Stock?</string>
    <string name="do_u_want_exit_cometitor_stock">Do you want to exit from Competitor Stock Entry?</string>
    <string name="complete_sync_in_prog">Completed, Synchronization in Progress.</string>
    <string name="success">success</string>
    <string name="plz_select_one_coll">Please select atleast one collection.</string>
    <string name="beat_plan">Route plan on -</string>
    <string name="top_dealer_list">Top Dealer List</string>
    <string name="painter_dealer_list">Painter List</string>
    <string name="do_u_want_start">Do you want to start?</string>
    <string name="do_u_want_enter_qty_or_range">Do you want to enter quantity or range?</string>
    <string name="do_u_want_select_full_or_partial">Do you want to select full or partial?</string>
    <string name="do_u_want_exit_app">Do you want to exit from the Application?</string>
    <string name="system_alter_message">Allow to access system permission?</string>
    <string name="export_device_log_to_device">Exporting device log to device, Please wait&#8230;</string>
    <string name="export_device_log_to_device_finish">Device log is export to SD card. Please send the file to support team.</string>
    <string name="crash_log_to_sdcard_finish">Crash log is export to SD card. Please send the file to support team.</string>
    <string name="export_databse_to_sdcard">Exporting DB to SDCard, Please wait&#8230;</string>
    <string name="import_databse_from_sdcard">Importing DB from SDCard, Please wait&#8230;</string>
    <string name="export_databse_to_sdcard_finish">DB exported to SD card successfully.</string>
    <string name="import_databse_from_sdcard_finish">DB imported from SD card successfully.</string>
    <string name="export_databse_to_sdcard_error_occurred">Error occurred while exporting DB to SD card.</string>
    <string name="import_databse_from_sdcard_error_occurred">Error occurred while importing DB from SD card.</string>
    <string name="cef_created_success">CEF has been created successfully.</string>
    <string name="snap_created_success">Snapshot saved successfully.</string>
    <string name="take_pic">Take a picture.</string>
    <string name="dialog_day_ended">Day ended</string>
    <string name="dialog_day_started">Day started</string>
    <string name="dialog_day_reset">Day end reset done</string>
    <string name="tv_complete">Day Completed</string>
    <string name="tv_end">End Day</string>
    <string name="tv_start">Start Day</string>
    <string name="tv_visit_start">Visit Started</string>
    <string name="alert_user_is_locked">User is locked.Please reset password</string>
    <string name="visit_error_remarks">Remarks is required</string>
    <string name="tv_visit">Visit</string>
    <string name="lbl_sample_quantity">Sample Quantity</string>
    <string name="lbl_sample_disbursement_create">Sample Disbursement</string>
    <string name="later">Later</string>
    <string name="msg_on_create">onCreate</string>
    <string name="reset_is_process_plz_wait">Reset in Process.Please Wait&#8230;</string>
    <string name="str_dealer_stock">Dealer Stock</string>
    <string name="insert_failed">Insertion Failed!</string>
    <string name="insert_sucess">Saved Successfully</string>
    <string name="insert_success_rela_call">Relationship call saved successfully</string>
    <string name="insert_success_bussiness_call">Business call saved successfully</string>
    <string name="insert_success_receipt">New Receipt saved successfully</string>
    <string name="validation_sel_atlest_one_material">select atleast one material.</string>
    <string name="validation_enter_qty_sel_material">Enter quantity for selected material.</string>
    <string name="validation_plz_enter_qty">Please enter the quantity.</string>
    <string name="validation_plz_select_reason">Please select reason.</string>
    <string name="validation_plz_enter_mandatory_flds">Please enter mandatory fields</string>
    <string name="validation_plz_fill_all_mandatory_flds">Please fill in all the mandatory fields</string>
    <string name="validation_plz_enter_instrument_no">Please enter the Instrument #</string>
    <string name="validation_enter_amount_sel_invoice">Enter amount for selcted invoice.</string>
    <string name="validation_sel_atlest_one_invoice">Select atleast one invoice number.</string>
    <string name="validation_req_fields_canot_spaces">Required field cannot contain spaces.</string>
    <string name="validation_req_fields_canot_left_blank">Required field cannot be left blank.</string>
    <string name="validation_network_not_avilable_offline_not_possible">Network No Available.Reset not Available in Offline Mode.</string>
    <string name="validation_plz_enter_username_pwd">Please Enter Valid Username and Password</string>
    <string name="validation_offline_login_no_internet">Offline Login. Internet Connection not Available..</string>
    <string name="no_data_found">No data found</string>
    <string name="back_menu">Back</string>
    <string name="submit_menu">Submit</string>
    <string name="title_invoiceCreate">Create Invoice</string>
    <string name="lbl_search">Search</string>
    <string name="last_pur_qty">Last Pur Qty</string>
    <string name="mat_rate">Rate</string>
    <string name="inv_qty">Inv Qty</string>
    <string name="lbl_semi_colon">:</string>
    <string name="total_inv_value">Total Invoice Value</string>
    <string name="lbl_code">Code</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_Search_by_order_number">Order number search</string>
    <string name="lbl_order_date">Order Date</string>
    <string name="lbl_order_number">Order Number</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="lbl_payment_status">Payment Status</string>
    <string name="lbl_quantity">Quantity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="addr_name">Address</string>
    <string name="street2_name">Street 2</string>
    <string name="street3_name">Street 3</string>
    <string name="street4_name">Street 4</string>
    <string name="ship_city">City</string>
    <string name="ship_district">Dsitrict</string>
    <string name="ship_postalcode">Postal COde</string>
    <string name="so_hint_country">Country *</string>
    <string name="so_hint_region">Region *</string>
</resources>