<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/ed_search"
        style="@style/EditBookTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@android:drawable/ic_menu_search"
        android:hint="@string/lbl_Search_by_order_number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_alice_blue"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="@dimen/_4sdp">

        <LinearLayout
            android:layout_width="@dimen/height_zero_dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/tv_order_date"
                android:gravity="center"
                android:text="@string/lbl_order_number"
                android:textColor="@color/header_tile_text_color"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/tv_order_id"
                android:gravity="center"
                android:text="@string/lbl_order_date"
                android:textColor="@color/header_tile_text_color"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:gravity="end"
                android:id="@+id/tv_order_quantity"
                android:paddingLeft="@dimen/_4sdp"
                android:text="@string/lbl_quantity"
                android:textColor="@color/header_tile_text_color"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:gravity="end"
                android:id="@+id/tv_order_value"
                android:paddingLeft="@dimen/_4sdp"
                android:text="@string/lbl_total_amount"
                android:textColor="@color/header_tile_text_color"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />
        </LinearLayout>
        <TextView
            android:layout_width="@dimen/height_zero_dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="@dimen/_4sdp"
            android:text="@string/lbl_payment_status"
            android:textColor="@color/header_tile_text_color"
            android:textSize="@dimen/medium_text"
            android:visibility="gone" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_2sdp"
        android:paddingTop="@dimen/_2sdp"/>

    <TextView
        android:id="@+id/no_record_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_data_found"
        android:textSize="@dimen/medium_text"
        android:textStyle="bold" />

</LinearLayout>
